--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_activity_main">Pigeon</string>
     <string name="package_name">com.johnpaulpatigas.pigeon</string>
     <string name="custom_url_scheme">com.johnpaulpatigas.pigeon</string>
+    <string name="server_client_id">189070630368-9ipios1lrhtulb486e4jha31ui13ksri.apps.googleusercontent.com</string>
 </resources>
